Fixed mask drawer algorithm Removed ROI drawer algorithm (hidden, deprecation)